# BigWorld-Engine-14.4.1

./: CONTRIBUTING.md  LICENSE  MAINTAINTERS.md  README.md  THIRD-PARTY-NOTICES  bigworld-devel-14.4.1.el7.x86_64.rpm  bigworld-web-integration-14.4.1.el7.x86_64.rpm
programming/bigworld/: CMakeLists.txt  Makefile  Makefile.rules
programming/bigworld/client/: CMakeLists.txt  action_matcher.cpp  action_matcher.hpp  adaptive_lod_controller.cpp  adaptive_lod_controller.hpp  adaptive_lod_controller.ipp  app.cpp  app.hpp  app.ipp  app_config.cpp  app_config.hpp  app_config.ipp  avatar_drop_filter.cpp  avatar_drop_filter.hpp  avatar_filter.cpp  avatar_filter.hpp  avatar_filter_callback.cpp  avatar_filter_callback.hpp  boids_filter.cpp  boids_filter.hpp  bw_winmain.cpp  bw_winmain.hpp  bwclient_filter_environment.cpp  bwclient_filter_environment.hpp  bwpersonality.mpp  bwvoip.cpp  bwvoip.hpp  camera_app.cpp  camera_app.hpp  camera_app.ipp  canvas_app.cpp  canvas_app.hpp  chunk_entity.cpp  chunk_entity.hpp  client.rc  client_camera.cpp  client_camera.hpp  client_camera.ipp  compile_time.cpp  connection_control.cpp  (+122 more)
programming/bigworld/client/watermark_creator/: pch.hpp  water_mark_creator.cpp
programming/bigworld/common/: closest_chunk_item.hpp  closest_triangle.hpp  pch.hpp  py_chunk.cpp  py_network.cpp  py_network.hpp  py_physics2.cpp  py_physics2.hpp  py_server_lib.cpp  py_terrain.cpp  py_timer.cpp  py_timer.hpp  py_urlrequest.cpp  simple_client_entity.cpp  simple_client_entity.hpp  space_data_types.hpp
programming/bigworld/examples/: Makefile  Makefile.rules
programming/bigworld/examples/cellapp_extension/: CMakeLists.txt  Makefile  Makefile.rules  bounce_grenade_extra.cpp  bounce_grenade_extra.hpp  debug_extension.cpp  dump_controllers_extra.cpp  dump_controllers_extra.hpp  egcontroller.cpp  egcontroller.hpp  egextra.cpp  egextra.hpp  speed_controller.cpp  speed_controller.hpp  speed_extra.cpp  speed_extra.hpp
programming/bigworld/examples/client_integration/: Makefile  Makefile.rules
programming/bigworld/lib/: Makefile  Makefile.rules
programming/bigworld/lib/appmgr/: CMakeLists.txt  app.cpp  app.hpp  app.ipp  application_input.cpp  application_input.hpp  application_input.ipp  appmgr_lib.hpp  closed_captions.cpp  closed_captions.hpp  closed_captions.ipp  commentary.cpp  commentary.hpp  commentary.ipp  dev_menu.cpp  dev_menu.hpp  dev_menu.ipp  factory.cpp  factory.hpp  factory.ipp  input_manager.cpp  input_manager.hpp  input_manager.ipp  module.cpp  module.hpp  module.ipp  module_manager.cpp  module_manager.hpp  module_manager.ipp  options.cpp  options.hpp  options.ipp  pch.hpp  script_instance.cpp  script_instance.hpp  script_instance.ipp  scripted_module.cpp  scripted_module.hpp  scripted_module.ipp
programming/bigworld/lib/ashes/: CMakeLists.txt  alpha_gui_shader.cpp  alpha_gui_shader.hpp  alpha_gui_shader.ipp  bounding_box_gui_component.cpp  bounding_box_gui_component.hpp  bounding_box_gui_component.ipp  clip_gui_shader.cpp  clip_gui_shader.hpp  clip_gui_shader.ipp  colour_gui_shader.cpp  colour_gui_shader.hpp  colour_gui_shader.ipp  console_gui_component.cpp  console_gui_component.hpp  frame_gui_component.cpp  frame_gui_component.hpp  frame_gui_component.ipp  frame_gui_component2.cpp  frame_gui_component2.hpp  gobo_component.cpp  gobo_component.hpp  graph_gui_component.cpp  graph_gui_component.hpp  gui_attachment.cpp  gui_attachment.hpp  gui_progress.cpp  gui_progress.hpp  gui_shader.cpp  gui_shader.hpp  gui_vertex_format.hpp  matrix_gui_shader.cpp  matrix_gui_shader.hpp  mesh_gui_adaptor.cpp  mesh_gui_adaptor.hpp  mesh_gui_adaptor.ipp  mouse_cursor.cpp  mouse_cursor.hpp  pch.cpp  pch.hpp  (+12 more)
programming/bigworld/lib/asset_pipeline/: CMakeLists.txt  asset_client.cpp  asset_client.hpp  asset_lock.cpp  asset_lock.hpp  asset_pipe.cpp  asset_pipe.hpp  asset_server.cpp  asset_server.hpp  pch.hpp
programming/bigworld/lib/bwentity/: CMakeLists.txt  bw_warnings_off.hpp  bw_warnings_on.hpp  bwentity.def  bwentity_api.hpp  bwentity_main.cpp  bwentity_namespace.hpp  bwentity_types.hpp  bwresource_helper.cpp  bwresource_helper.hpp  entity_description_map.cpp  entity_description_map.hpp  entity_description_map_factory.cpp  entity_description_map_factory.hpp  entitydef_interface.hpp  object_deleters.cpp  object_deleters.hpp  pch.cpp  pch.hpp  reference_count.hpp  udo_ref_data_type.cpp  udo_ref_data_type.hpp
programming/bigworld/lib/camera/: CMakeLists.txt  annal.cpp  annal.hpp  base_camera.cpp  base_camera.hpp  base_camera.ipp  camera_blender.cpp  camera_blender.hpp  camera_control.cpp  camera_control.hpp  collision_advance.cpp  collision_advance.hpp  cursor_camera.cpp  cursor_camera.hpp  cursor_camera.ipp  direction_cursor.cpp  direction_cursor.hpp  direction_cursor.ipp  flexicam.cpp  flexicam.hpp  flexicam.ipp  free_camera.cpp  free_camera.hpp  pch.hpp  projection_access.cpp  projection_access.hpp  projection_access.ipp
programming/bigworld/lib/chunk/: CMakeLists.txt  Makefile  Makefile.rules  base_chunk_space.cpp  base_chunk_space.hpp  base_chunk_tree.cpp  base_chunk_tree.hpp  chunk.cpp  chunk.hpp  chunk_binding.cpp  chunk_binding.hpp  chunk_boundary.cpp  chunk_boundary.hpp  chunk_bsp_holder.cpp  chunk_bsp_holder.hpp  chunk_cache.cpp  chunk_cache.hpp  chunk_cache.ipp  chunk_clean_flags.cpp  chunk_clean_flags.hpp  chunk_deferred_decal.cpp  chunk_deferred_decal.hpp  chunk_exit_portal.cpp  chunk_exit_portal.hpp  chunk_flare.cpp  chunk_flare.hpp  chunk_flora.cpp  chunk_flora.hpp  chunk_flora.ipp  chunk_format.hpp  chunk_grid_size.cpp  chunk_grid_size.hpp  chunk_item.cpp  chunk_item.hpp  chunk_item_amortise_delete.cpp  chunk_item_amortise_delete.hpp  chunk_item_tree_node.cpp  chunk_item_tree_node.hpp  chunk_lib.hpp  chunk_light.cpp  (+115 more)
programming/bigworld/lib/chunk_loading/: CMakeLists.txt  Makefile  Makefile.rules  chunk_loading_ref_count.cpp  chunk_loading_ref_count.hpp  edge_geometry_mapping.cpp  edge_geometry_mapping.hpp  geometry_mapper.hpp  (+8 more)
programming/bigworld/server/: Makefile  Makefile.rules  valgrind-server.supp
programming/bigworld/tools/: Makefile  Makefile.rules
(+5697 files in other folders)
